--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+  	<header>
+  		<nav>
+  			<ul>
+  				<li><a href="info.html">ИНФОРМАЦИЯ</a></li>
+  				<li><a href="photo.html">ФОТО И ВИДЕО</a></li>
+  				<li><a href="map.html">КАРТА ШТАТА</a></li>
+  				<li><a href="hostels.html">ГОСТИНИЦЫ</a></li>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+  			</ul>
+  		</nav>
+  	</header>
   </body>
 </html>
