--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
   <body>
   	<header>
   		<nav>
+  			<a>
+  				<img src="img/index-logo.svg" width="150" height="100" alt="логотип Седона">
+  			</a>
   			<ul>
   				<li><a href="info.html">ИНФОРМАЦИЯ</a></li>
   				<li><a href="photo.html">ФОТО И ВИДЕО</a></li>
   				<li><a href="map.html">КАРТА ШТАТА</a></li>
   				<li><a href="hostels.html">ГОСТИНИЦЫ</a></li>
-
   			</ul>
   		</nav>
   	</header>
+  	<main>
+
+  		
+  	</main>
   </body>
 </html>
