--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</h2>
         <ul>
           <li>
-            <h3>Настоящий городок -№1-</h3>
+            <h3>Настоящий городок <br>-№1-</h3>
             <p>СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
           </li>
           <li>
@@ -46,15 +46,15 @@
             <img src="img/bridge-logo.svg" width="300" height="100" alt="фотка моста ДЬЯВОЛА">
           </li>
           <li>
-            <h3>ТАМ ЕСТЬ МОСТ ДЬЯВОЛА -№2-</h3>
+            <h3>ТАМ ЕСТЬ МОСТ ДЬЯВОЛА <br>-№2-</h3>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </li>
           <li>
-            <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ -№3-</h3>
+            <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ <br>-№3-</h3>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
           <li>
-            <h3>КРАСИВАЯ ДОРОГА -№4-</h3>
+            <h3>КРАСИВАЯ ДОРОГА <br>-№4-</h3>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li>
