--- a/hotels.html
+++ b/hotels.html
@@ -6,18 +6,18 @@
   </head>
   <body>
   	<header>
-  		<nav>
-  			<a>
-  				<img src="img/index-logo.svg" width="150" height="100" alt="логотип Седона">
-  			</a>
-  			<ul>
-  				<li><a href="info.html">ИНФОРМАЦИЯ</a></li>
-  				<li><a href="photo.html">ФОТО И ВИДЕО</a></li>
-  				<li><a href="map.html">КАРТА ШТАТА</a></li>
-  				<li><a href="hostels.html">ГОСТИНИЦЫ</a></li>
-  			</ul>
-  		</nav>
-  	</header>
+      <nav>
+        <a>
+          <img src="img/svg/logo-sedona.svg" width="150" height="100" alt="логотип Седона">
+        </a>
+        <ul>
+          <li><a href="info.html">ИНФОРМАЦИЯ</a></li>
+          <li><a href="photo.html">ФОТО И ВИДЕО</a></li>
+          <li><a href="map.html">КАРТА ШТАТА</a></li>
+          <li><a href="hostels.html">ГОСТИНИЦЫ</a></li>
+        </ul>
+      </nav>
+    </header>
   	<main>
       <section>
         <ul>
@@ -78,24 +78,17 @@
 
       </section>
 
-
-
-
-
-
-
-
   	</main>
     <footer>
       <p>#VISITSEDONA</p>
       <div>
         <ul>
-          <li><a href="#">Твиттер</a></li>
-          <li><a href="#">Файсбук</a></li>
-          <li><a href="#">Ютуб</a></li>
+          <li><a href="#"><img src="img/svg/twitter.svg">Twitter</a></li>
+          <li><a href="#"><img src="img/svg/fb-icon.svg">Файсбук</a></li>
+          <li><a href="#"><img src="img/svg/youtube.svg">Ютуб</a></li>
         </ul>
       </div>
-      <p><a href="#"><img src="img/html-academy.svg" width="100" height="50" alt="Разработано html-academy"></a></p>
+      <p><a href="#"><img src="img/svg/logo-htmlacademy.svg" width="100" height="50" alt="Разработано html-academy"></a></p>
     </footer>
   </body>
 </html>
