--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy:Седона</title>
   </head>
-  <body>
+  <body class="index-page">
   	<header class="main-header">
   		<nav class="main-navigation">
   			<ul>
@@ -19,6 +19,10 @@
   		</nav>
   	</header>
   	<main>
+      <section class="welcomeSVG">
+        <img src="img/svg/welcome.svg" width="150" height="100" alt="welcome Седона">
+      </section>
+
       <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
   		<section>
         <h2>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</h2>
@@ -95,7 +99,7 @@
               <button type="button">+</button>
             </p>
           </fieldset>
-          <button type="submit">Показать</button>
+          <button class="button-find" type="submit">Найти</button>
         </form>
         <img src="img/jpg/map_sedona.jpg"  width="900" height="400">
       </section>
